ghc-4335c07/testsuite/tests/typecheck/should_fail/T13677.hs
{-# LANGUAGE ConstraintKinds #-}
{-# LANGUAGE GADTs #-}
module T13677 where

import GHC.Exts (Constraint)

data Dict a where
  Dict :: a => Dict a

foo :: Dict (Int ~ Int) => Int
foo = undefined
